--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,7 @@
 <!--
 Code copied from Code Institute "I Think Therefore I Blog" project,
-# index.html file, on December 20th, 2022 at 18:58
+# index.html file, on December 20th, 2022 at 18:58, later modified
 -->
-
 {% extends "base.html" %}
 {% block content %}
 {% load static %}
