Validate index.html and weather.html with validator.w3.org and Wave accessibility

--- a/templates/base.html
+++ b/templates/base.html
@@ -132,11 +132,11 @@
                             <!-- Font Awesome
                             Icon for LinkedIn: downloaded on December 7th, 2021, 05:50 from https://fontawesome.com/v5.15/icons/linkedin?style=brands -->
                             <a class="nav-link active" href="https://www.linkedin.com/in/carloscolombo/" target="_blank" rel="noopener"
-                            aria-label="Visit The Green Company LinkedIn page (it opens in a new tab)"><i class="fab fa-linkedin"></i></a>
+                            aria-label="Visit Developer LinkedIn page (it opens in a new tab)"><i class="fab fa-linkedin"></i></a>
                             <!-- Font Awesome
                             Icon for GitHub: downloaded on December 7th, 2021, 05:52 from https://fontawesome.com/v5.15/icons/github-square?style=brands -->
                             <a class="nav-link" href="https://github.com/csc7" target="_blank" rel="noopener"
-                            aria-label="Visit The Green Company Facebook page (it opens in a new tab)"><i class="fab fa-github-square"></i></a>
+                            aria-label="Visit WQCS Facebook page (it opens in a new tab)"><i class="fab fa-github-square"></i></a>
                             <!-- Font Awesome
                             Icon for E-mail: downloaded on December 7th, 2021, 05:53 from https://fontawesome.com/v5.15/icons/envelope-square?style=solid -->
                             <a class="nav-link" href="mailto:cscolombo@gmail.com" target="_blank" rel="noopener"
