Validate blog.html and contact.html with validator.w3.org and Wave accessibility

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -16,7 +16,7 @@ Code copied from Code Institute "I Think Therefore I Blog" project,
             <div class="row" id="blog-content">
                 {% for post in post_list %}
                 <div class="col-md-4">
-                    <div id="post-box" class="card mb-4">
+                    <div id="post-box_{{post.id}}" class="card mb-4 post-box-class">
                         <div class="card-body">
                             <div class="image-container">
                                 <!-- Credit for icon/images in each topic
