--- a/templates/contact.html
+++ b/templates/contact.html
@@ -22,7 +22,7 @@
                     {{ form.surname }}
                 </div>
                 <!-- E-mail -->
-                <div id="form-left-3" id="e-mail-contact" class="col-12">
+                <div id="form-left-3" class="col-12">
                     {{ form.email.errors }}
                     <label class="form-labels" for="{{ form.email.id_for_label }}">E-mail</label>
                     {{ form.email }}
