--- a/templates/403.html
+++ b/templates/403.html
@@ -5,12 +5,12 @@
 
 {% block content %}
     <div class="overlay-404"></div>
-    <div id="404-div" class="container-fluid h-100">
+    <div id="error-403-div" class="container-fluid h-100">
         <div class="row">
             <div class="col-12 my-auto">
-                <p id="message-in-404-page" class="dark-blue-font">Sorry, something went wrong (Error 403)... Please, try later.</p>            
+                <p id="message-in-403-page" class="dark-blue-font">Sorry, something went wrong (Error 403)... Please, try later.</p>            
                 <p class="mt-2">
-                    <a id="home-button-in-404" class="btn btn-primary rounded-0 text-uppercase" href="{% url 'instructions' %}">Home</a>
+                    <a id="home-button-in-403" class="btn btn-primary rounded-0 text-uppercase" href="{% url 'instructions' %}">Home</a>
                 </p>
             </div>
         </div>
