--- a/templates/404.html
+++ b/templates/404.html
@@ -5,7 +5,7 @@
 
 {% block content %}
     <div class="overlay-404"></div>
-    <div id="404-div" class="container-fluid h-100">
+    <div id="error-404-div" class="container-fluid h-100">
         <div class="row">
             <div class="col-12 my-auto">
                 <p id="message-in-404-page" class="dark-blue-font">Sorry, something went wrong (Error 404)... Please, try later.</p>            
