--- a/templates/400.html
+++ b/templates/400.html
@@ -5,12 +5,12 @@
 
 {% block content %}
     <div class="overlay-404"></div>
-    <div id="404-div" class="container-fluid h-100">
+    <div id="error-400-div" class="container-fluid h-100">
         <div class="row">
             <div class="col-12 my-auto">
-                <p id="message-in-404-page" class="dark-blue-font">Sorry, something went wrong (Error 400)... Please, try later.</p>            
-                <p class="mt-2">
-                    <a id="home-button-in-404" class="btn btn-primary rounded-0 text-uppercase" href="{% url 'instructions' %}">Home</a>
+                <p id="message-in-400-page" class="dark-blue-font">Sorry, something went wrong (Error 400)... Please, try later.</p>            
+                <p class="mt-2 h-100">
+                    <a id="home-button-in-400" class="btn btn-primary rounded-0 text-uppercase" href="{% url 'instructions' %}">Home</a>
                 </p>
             </div>
         </div>
