--- a/templates/403.html
+++ b/templates/403.html
@@ -10,7 +10,7 @@
             <div class="col-12 my-auto">
                 <p id="message-in-403-page" class="dark-blue-font">Sorry, something went wrong (Error 403)... Please, try later.</p>            
                 <p class="mt-2">
-                    <a id="home-button-in-403" class="btn btn-primary rounded-0 text-uppercase" href="{% url 'instructions' %}">Home</a>
+                    <a id="home-button-in-403" class="btn btn-dark rounded-0 text-uppercase" href="{% url 'instructions' %}">Home</a>
                 </p>
             </div>
         </div>
